fix(theme): rework spacing for heading and description lists
OUI-975

--- a/projects/oblique/src/styles/scss/core/components/_type.scss
+++ b/projects/oblique/src/styles/scss/core/components/_type.scss
@@ -2,7 +2,7 @@
 @import "../mixins/typography";
 
 h1, h2, h3, h4, h5, h6 {
-	margin: 0;
+	margin: 0 0 0.5em 0;
 	color: $black;
 }
 
@@ -173,8 +173,12 @@ dt {
 }
 
 dd {
-	margin-bottom: $spacing-default * 0.5;
+	margin-bottom: 0;
 	margin-left: 0;
+
+	+ dt {
+		margin-top: $spacing-sm;
+	}
 }
 
 // block elements
